<resources>
    <string name="app_name">First navigable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_title">登录第一通航咨询</string>

    <string name="login_phone_code">+86</string>
    <string name="login_hint_input_phone_number">请输入手机号</string>
    <string name="login_hint_input_verification_number">请输入验证码</string>
    <string name="login_send_verification_number">获取验证码</string>
    <string name="login_hint_msg">未注册手机验证后自动登录</string>
    <string name="login_login">登录</string>
    <string name="login_licence">我已阅读并同意"用户协议" 和 "隐式条款"</string>
    <string name="login_third_part_login_msg">第三方账号快速登录</string>
    <string name="login_verification_code_send_ok">验证码发送成功</string>
    <string name="login_verification_code_send_fail">验证码发送失败</string>
    <string name="login_set_head_pic">设置头像</string>
    <string name="login_register_input_your_nickname">请输入用户名</string>
    <string name="login_register_done">完成</string>


    <string name="login_register_request_permission_dialog_title">相机权限</string>
    <string name="login_register_request_permission_dialog_description">设置头像必须使用相机权限，请在授权对话框中点击同意，否则没法拍照</string>
    <string name="login_register_request_permission_dialog_description_2">设置头像必须使用相机权限，请在设置界手动打开相机权限，否则没法拍照</string>
    <string name="login_register_request_permission_dialog_request_permission">去设置</string>
    <string name="login_register_request_permission_dialog_cancel">放弃</string>
    <string name="login_register_request_permission_dialog_tiaoguo">跳  过</string>
    <string name="login_register_request_permission_dialog_wancheng">完  成</string>
    <string name="login_register_request_permission_dialog_yonghu">请输入用户名</string>
    <string name="login_register_request_permission_dialog_toxiang">上传头像</string>


    <string name="rtgister_quxiao">取消</string>
    <string name="rtgister_xiangce">相册</string>
    <string name="rtgister_xiangji">拍照</string>
    <string name="rtgister_wode">我的</string>
    <string name="rtgister_advisory">咨询</string>
    <string name="rtgister_huati">话题</string>


</resources>
