<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/cha_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="57dp"
        android:text="@string/login_title"
        android:textColor="@color/text_bg_color_a"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="57dp"
        android:text="+86"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_getphoneNumbar"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/login_hint_input_phone_number"
        android:inputType="phone"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="14dp"
        android:background="@color/text_bg_color_h"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/edit_getphoneNumbar"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="11dp"
        android:background="@color/text_bg_color_f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/login_hint_input_verification_number"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/text_bg_color_h"
        app:layout_constraintBottom_toBottomOf="@+id/edit_code"
        app:layout_constraintEnd_toStartOf="@+id/_btn_getCode"
        app:layout_constraintStart_toEndOf="@+id/edit_code"
        app:layout_constraintTop_toTopOf="@+id/edit_code" />

    <Button
        android:id="@+id/_btn_getCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/login_send_verification_number"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/edit_getphoneNumbar"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="9dp"
        android:background="@color/text_bg_color_f0"
        app:layout_constraintEnd_toEndOf="@+id/_btn_getCode"
        app:layout_constraintStart_toStartOf="@+id/edit_code"
        app:layout_constraintTop_toBottomOf="@+id/edit_code" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/login_hint_msg"
        app:layout_constraintEnd_toEndOf="@+id/_btn_getCode"
        app:layout_constraintStart_toStartOf="@+id/edit_code"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/login_button_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="@color/text_bg_color_g"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/check_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/login_licence"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/disanfang_img"
        app:layout_constraintBottom_toTopOf="@+id/img_qq"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/img_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/weixin_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_qq"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/qq_img"
        app:layout_constraintBottom_toBottomOf="@+id/img_wechat"
        app:layout_constraintEnd_toStartOf="@+id/img_weibo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_wechat"
        app:layout_constraintTop_toTopOf="@+id/img_wechat" />

    <ImageView
        android:id="@+id/img_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weibo_img"
        app:layout_constraintBottom_toBottomOf="@+id/img_qq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_qq"
        app:layout_constraintTop_toTopOf="@+id/img_qq" />

</android.support.constraint.ConstraintLayout>